[package]
name = "shapefile"
version = "0.6.0"
authors = ["tmontaigu <thomas.montaigu@laposte.net>"]
description = "Read & Write shapefiles in Rust"
license = "MIT"
readme = "README.md"
keywords = ["shapefile"]
homepage = "https://github.com/tmontaigu/shapefile-rs"
repository = "https://github.com/tmontaigu/shapefile-rs"
exclude = ["tests/data/*"]
edition = "2021"

[dependencies]
byteorder = "1.2.7"
dbase = { git = "https://github.com/tmontaigu/dbase-rs", rev = "d0a06a6006cbd3f75bccef86cc21614063759b54" }
geo-types = {version = ">=0.4.0, <0.8.0", optional = true}


[package.metadata.docs.rs]
features = ["geo-types"]
