[package]
name = "shapefile"
version = "0.6.0"
authors = ["tmontaigu <thomas.montaigu@laposte.net>"]
description = "Read & Write shapefiles in Rust"
license = "MIT"
readme = "README.md"
keywords = ["shapefile"]
homepage = "https://github.com/tmontaigu/shapefile-rs"
repository = "https://github.com/tmontaigu/shapefile-rs"
exclude = ["tests/data/*"]
edition = "2021"

[dependencies]
byteorder = "1.2.7"
dbase = { git = "https://github.com/fschutt/dbase-rs", default-features = false, rev = "e76b8aa74e97febc07a4eac39868d727bfccfa41" }
geo-types = {version = ">=0.4.0, <0.8.0", optional = true}


[package.metadata.docs.rs]
features = ["geo-types"]
